cabal-version:      3.0
name:               sandal
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             tom
maintainer:         thomashoytepickett@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
executable sandal
    import:           warnings
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:
                      FileTree
                      Graphing
    other-extensions:
    build-depends:
                      base ^>=4.17.2.1,
                      containers ^>=0.7,
                      graphviz ^>=2999.20.2.0,
                      fgl ^>=5.8.2.0,
                      directory ^>=1.3.9.0
    -- Directories containing source files.
    hs-source-dirs:   app
    -- Base language which the package is written in.
    default-language: Haskell2010
