cabal-version:      3.0
name:               sandal
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Tom Pickett
maintainer:         thomashoytepickett@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
executable sandal
    import:           warnings
    main-is:          Main.hs
    other-modules:
                      FileTree
                      Graphing
                      Settings
    other-extensions:
    build-depends:
                      base ^>=4.17.2.1,
                      containers ^>=0.7,
                      graphviz ^>=2999.20.2.0,
                      fgl ^>=5.8.2.0,
                      directory ^>=1.3.9.0,
                      optparse-applicative ^>=0.18.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
